--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>José Andrés Chairez Contreras</h1>
-    <img src="24bb7d67-d538-431f-955c-394eb5ff8a24.jpg" alt="nada">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas facere, animi accusamus,
+      sapiente repellat corporis vel quaerat harum perferendis quis quibusdam ut quia ipsum
+      reiciendis incidunt beatae quidem laudantium tenetur?</p>
+    
 </body>
 </html>
